2010-03-30  Jochen Eisinger  <jochen@chromium.org>

Reviewed by Jeremy Orlow.

        Remove dysfunctional implementation of canEstablishDatabase for
        Workers. I postpone this implementation until Workers can actually
        access Web Databases.

        https://bugs.webkit.org/show_bug.cgi?id=36795

        * src/DatabaseObserver.cpp:
        (WebCore::DatabaseObserver::canEstablishDatabase):
        * src/WebWorkerBase.h:

Canonical link: https://commits.webkit.org/48076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56782 268f45cc-cd09-0410-ab3c-d52691b4dbfc